sumo/tests/dfrouter/errors/Makefile.am
SUBDIRS =  false_net false_space false_space2 false_space3 no_detector_files \
no_detectors_output quad_minus quad_minus2 quad_minus3 triple_minus \
triple_minus2 triple_minus3 unknown_option

EXTRA_DIST =  input_detectors.det.xml input_net.net.xml testsuite.dfrouter

